# aspettami-bot

./: .gitignore  Dockerfile  LICENSE  Pipfile  README.md  docker-compose.yaml  main.py  pyproject.toml
.github/: dependabot.yml
aspettami/: api.py  bot.py  config.py  db.py  handlers.py  keyboards.py  logger.py  stop.py
